--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,9 @@
-.container {
-	boder: 3px solid black;
-}
-
-td {
-	height: 30px;
-	width: 30px;
+.cell {
+	height: 40px;
+	width: 40px;
+	line-height: 40px;	
+	background-color: #E0E0E0;
 	border: 1px solid black;
+	vertical-align: middle;
+	text-align: center;
 }
