--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,14 @@
+table{
+	border-collapse: collapse;
+}
+
 .cell {
+	margin: 0px;
 	height: 40px;
 	width: 40px;
 	line-height: 40px;	
 	background-color: #E0E0E0;
-	border: 1px solid black;
+/*	border: 1px solid black; */
 	vertical-align: middle;
 	text-align: center;
 }
